@@ -13,7 +13,7 @@ config:
 	  window:
 	  {
 		title = "data driven demo";
-		size = { w = 800; h = 600 };
+		size = { w = 600; h = 500 };
 
 		background = { r = 100; g = 100; b = 100; a = 255 };
 	  };
@@ -26,24 +26,6 @@ config:
 		{
 			name = "others";
 			file = "astronaut.png";
-		}
-	  );
-
-	  objects = (
-	  	{
-			name = "player";
-			texture = "player";
-			init_pos = { x = 0; y = 400; };
-		},
-		{
-			name = "fixed_01";
-			texture = "others";
-			init_pos = { x = 100; y = 300; };
-		},
-		{
-			name = "fixed_02";
-			texture = "others";
-			init_pos = { x = 50; y = 100; };
 		}
 	  );
 }
