@@ -48,13 +48,19 @@ error:
 }
 
 LIGGAME_EXPORT game_obj_t *
-alloc_game_object_from_array(char *name, int x, int y, game_texture_t a[])
+alloc_game_object_from_array(char *name, char *texture_name, int x, int y,
+			game_texture_t a[])
 {
 	for (int i = 0; a[i].name != NULL; i++) {
-		if (strlen(name) != strlen(a[i].name))
+
+		if (strlen(texture_name) != strlen(a[i].name)) {
+			printf("strlen passt nicht name %s ... a[i].name %s \n", texture_name, a[i].name);
 			continue;
-		if (strncmp(a[i].name, name, strlen(name)) != 0)
+		}
+		if (strncmp(a[i].name, texture_name, strlen(texture_name)) != 0) {
+			printf("strlen passt nicht name %s ... a[i].name %s \n", texture_name, a[i].name);
 			continue;
+		}
 
 		printf("found it a[i].name: %s\n", a[i].name);
 
