@@ -1,0 +1,2 @@
+/object_fab
+/main.o
