@@ -1,0 +1,49 @@
+#
+# object_fab -> example for a valid configuration
+#
+# BSD 2-Clause
+# (c) 2017, thorsten.johannvorderbrueggen@t-online.de
+#
+
+# somthing like a simple version check
+name = "object_fab";
+
+config:
+{
+	  window:
+	  {
+		title = "object_fab demo";
+		size = { w = 600; h = 500 };
+
+		background = { r = 100; g = 100; b = 100; a = 255 };
+	  };
+
+	  textures = (
+		{
+			name = "player";
+			file = "astronaut_side.png";
+		},
+		{
+			name = "others";
+			file = "astronaut.png";
+		}
+	  );
+
+	  objects = (
+	  	{
+			name = "player";
+			texture = "player";
+			init_pos = { x = 0; y = 400; };
+		},
+		{
+			name = "fixed_1";
+			texture = "others";
+			init_pos = { x = 100; y = 300; };
+		},
+		{
+			name = "fixed_2";
+			texture = "others";
+			init_pos = { x = 50; y = 100; };
+		}
+	  );
+}
